--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -136,7 +136,6 @@ set_real_ip_from 15.204.238.148;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.213.185.133;
 set_real_ip_from 154.213.185.165;
-set_real_ip_from 154.213.185.183;
 set_real_ip_from 154.213.185.185;
 set_real_ip_from 154.213.185.230;
 set_real_ip_from 154.213.185.254;
@@ -271,7 +270,6 @@ set_real_ip_from 185.146.232.234;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
-set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.14;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.170.114.25;
@@ -628,7 +626,7 @@ set_real_ip_from 195.47.238.83;
 set_real_ip_from 195.47.238.84;
 set_real_ip_from 195.47.238.86;
 set_real_ip_from 195.47.238.87;
-set_real_ip_from 195.47.238.89;
+set_real_ip_from 195.47.238.92;
 set_real_ip_from 195.47.238.93;
 set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
@@ -1160,13 +1158,13 @@ set_real_ip_from 2a04:52c0:123:c6c3::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:130:896e::1;
 set_real_ip_from 2a04:52c0:130:d285::1;
+set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:541:121:33::1;
 set_real_ip_from 2a05:541:122:49::1;
 set_real_ip_from 2a05:b0c7:6388::1;
-set_real_ip_from 2a05:b0c7:67c6::1;
 set_real_ip_from 2a05:b0c7:6949::1;
 set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a06:1280:bee1:2::ee12:230;
@@ -1367,8 +1365,8 @@ set_real_ip_from 2a0b:f4c2::6;
 set_real_ip_from 2a0b:f4c2::7;
 set_real_ip_from 2a0b:f4c2::8;
 set_real_ip_from 2a0b:f4c2::9;
+set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
-set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
@@ -1491,6 +1489,7 @@ set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.247;
+set_real_ip_from 45.129.84.249;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.138.16.107;
@@ -1581,6 +1580,7 @@ set_real_ip_from 51.89.153.112;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.227;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
 set_real_ip_from 5.255.111.64;
@@ -1656,6 +1656,7 @@ set_real_ip_from 82.221.139.190;
 set_real_ip_from 82.85.247.254;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
+set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.211.226.13;
 set_real_ip_from 84.239.46.144;
@@ -1740,6 +1741,7 @@ set_real_ip_from 94.75.225.81;
 set_real_ip_from 95.128.43.164;
 set_real_ip_from 95.142.161.63;
 set_real_ip_from 95.143.193.125;
+set_real_ip_from 95.211.244.28;
 set_real_ip_from 96.126.98.146;
 set_real_ip_from 96.66.15.152;
 set_real_ip_from 98.128.173.33;
