--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -209,7 +209,7 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
-allow 178.30.96.132;
+allow 178.31.60.188;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -247,7 +247,6 @@ allow 185.112.146.167;
 allow 185.113.128.30;
 allow 185.117.215.9;
 allow 185.123.102.122;
-allow 185.126.117.21;
 allow 185.129.61.1;
 allow 185.129.61.10;
 allow 185.129.61.129;
@@ -270,9 +269,11 @@ allow 185.146.232.234;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.14;
 allow 185.165.171.84;
 allow 185.170.114.25;
+allow 185.177.151.34;
 allow 185.183.157.214;
 allow 185.183.159.40;
 allow 185.191.204.254;
@@ -626,8 +627,7 @@ allow 195.47.238.83;
 allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
-allow 195.47.238.92;
-allow 195.47.238.93;
+allow 195.47.238.88;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.251.84.163;
@@ -778,6 +778,101 @@ allow 204.8.156.142;
 allow 204.85.191.7;
 allow 204.85.191.8;
 allow 204.85.191.9;
+allow 204.8.96.100;
+allow 204.8.96.101;
+allow 204.8.96.102;
+allow 204.8.96.103;
+allow 204.8.96.104;
+allow 204.8.96.105;
+allow 204.8.96.106;
+allow 204.8.96.107;
+allow 204.8.96.108;
+allow 204.8.96.109;
+allow 204.8.96.110;
+allow 204.8.96.111;
+allow 204.8.96.112;
+allow 204.8.96.113;
+allow 204.8.96.114;
+allow 204.8.96.115;
+allow 204.8.96.116;
+allow 204.8.96.117;
+allow 204.8.96.118;
+allow 204.8.96.119;
+allow 204.8.96.120;
+allow 204.8.96.121;
+allow 204.8.96.122;
+allow 204.8.96.123;
+allow 204.8.96.140;
+allow 204.8.96.141;
+allow 204.8.96.142;
+allow 204.8.96.143;
+allow 204.8.96.144;
+allow 204.8.96.145;
+allow 204.8.96.146;
+allow 204.8.96.147;
+allow 204.8.96.149;
+allow 204.8.96.150;
+allow 204.8.96.151;
+allow 204.8.96.152;
+allow 204.8.96.153;
+allow 204.8.96.154;
+allow 204.8.96.155;
+allow 204.8.96.156;
+allow 204.8.96.157;
+allow 204.8.96.158;
+allow 204.8.96.159;
+allow 204.8.96.160;
+allow 204.8.96.161;
+allow 204.8.96.162;
+allow 204.8.96.163;
+allow 204.8.96.164;
+allow 204.8.96.165;
+allow 204.8.96.166;
+allow 204.8.96.167;
+allow 204.8.96.168;
+allow 204.8.96.169;
+allow 204.8.96.170;
+allow 204.8.96.171;
+allow 204.8.96.172;
+allow 204.8.96.173;
+allow 204.8.96.174;
+allow 204.8.96.175;
+allow 204.8.96.176;
+allow 204.8.96.177;
+allow 204.8.96.178;
+allow 204.8.96.179;
+allow 204.8.96.180;
+allow 204.8.96.181;
+allow 204.8.96.182;
+allow 204.8.96.183;
+allow 204.8.96.184;
+allow 204.8.96.185;
+allow 204.8.96.187;
+allow 204.8.96.188;
+allow 204.8.96.189;
+allow 204.8.96.64;
+allow 204.8.96.67;
+allow 204.8.96.68;
+allow 204.8.96.69;
+allow 204.8.96.70;
+allow 204.8.96.71;
+allow 204.8.96.72;
+allow 204.8.96.73;
+allow 204.8.96.74;
+allow 204.8.96.75;
+allow 204.8.96.76;
+allow 204.8.96.77;
+allow 204.8.96.78;
+allow 204.8.96.79;
+allow 204.8.96.80;
+allow 204.8.96.81;
+allow 204.8.96.82;
+allow 204.8.96.83;
+allow 204.8.96.84;
+allow 204.8.96.86;
+allow 204.8.96.87;
+allow 204.8.96.88;
+allow 204.8.96.89;
 allow 205.185.113.180;
 allow 205.185.116.34;
 allow 205.185.117.149;
@@ -1070,6 +1165,101 @@ allow 2620:18c:0:192::227;
 allow 2620:18c:0:192::228;
 allow 2620:18c:0:192::229;
 allow 2620:18c:0:192::230;
+allow 2620:7:6001::101;
+allow 2620:7:6001::102;
+allow 2620:7:6001::103;
+allow 2620:7:6001::104;
+allow 2620:7:6001::105;
+allow 2620:7:6001::106;
+allow 2620:7:6001::107;
+allow 2620:7:6001::108;
+allow 2620:7:6001::109;
+allow 2620:7:6001::110;
+allow 2620:7:6001::111;
+allow 2620:7:6001::112;
+allow 2620:7:6001::113;
+allow 2620:7:6001::114;
+allow 2620:7:6001::115;
+allow 2620:7:6001::116;
+allow 2620:7:6001::117;
+allow 2620:7:6001::118;
+allow 2620:7:6001::119;
+allow 2620:7:6001::120;
+allow 2620:7:6001::121;
+allow 2620:7:6001::122;
+allow 2620:7:6001::123;
+allow 2620:7:6001::140;
+allow 2620:7:6001::141;
+allow 2620:7:6001::142;
+allow 2620:7:6001::143;
+allow 2620:7:6001::144;
+allow 2620:7:6001::145;
+allow 2620:7:6001::146;
+allow 2620:7:6001::147;
+allow 2620:7:6001::149;
+allow 2620:7:6001::150;
+allow 2620:7:6001::151;
+allow 2620:7:6001::152;
+allow 2620:7:6001::153;
+allow 2620:7:6001::154;
+allow 2620:7:6001::155;
+allow 2620:7:6001::156;
+allow 2620:7:6001::157;
+allow 2620:7:6001::158;
+allow 2620:7:6001::159;
+allow 2620:7:6001::160;
+allow 2620:7:6001::161;
+allow 2620:7:6001::162;
+allow 2620:7:6001::163;
+allow 2620:7:6001::164;
+allow 2620:7:6001::165;
+allow 2620:7:6001::166;
+allow 2620:7:6001::167;
+allow 2620:7:6001::168;
+allow 2620:7:6001::169;
+allow 2620:7:6001::170;
+allow 2620:7:6001::171;
+allow 2620:7:6001::172;
+allow 2620:7:6001::173;
+allow 2620:7:6001::174;
+allow 2620:7:6001::175;
+allow 2620:7:6001::176;
+allow 2620:7:6001::177;
+allow 2620:7:6001::178;
+allow 2620:7:6001::179;
+allow 2620:7:6001::180;
+allow 2620:7:6001::181;
+allow 2620:7:6001::182;
+allow 2620:7:6001::183;
+allow 2620:7:6001::184;
+allow 2620:7:6001::185;
+allow 2620:7:6001::187;
+allow 2620:7:6001::188;
+allow 2620:7:6001::189;
+allow 2620:7:6001::e664;
+allow 2620:7:6001::ffff:c759:e640;
+allow 2620:7:6001::ffff:c759:e643;
+allow 2620:7:6001::ffff:c759:e644;
+allow 2620:7:6001::ffff:c759:e645;
+allow 2620:7:6001::ffff:c759:e646;
+allow 2620:7:6001::ffff:c759:e647;
+allow 2620:7:6001::ffff:c759:e648;
+allow 2620:7:6001::ffff:c759:e649;
+allow 2620:7:6001::ffff:c759:e64a;
+allow 2620:7:6001::ffff:c759:e64b;
+allow 2620:7:6001::ffff:c759:e64c;
+allow 2620:7:6001::ffff:c759:e64d;
+allow 2620:7:6001::ffff:c759:e64e;
+allow 2620:7:6001::ffff:c759:e64f;
+allow 2620:7:6001::ffff:c759:e650;
+allow 2620:7:6001::ffff:c759:e651;
+allow 2620:7:6001::ffff:c759:e652;
+allow 2620:7:6001::ffff:c759:e653;
+allow 2620:7:6001::ffff:c759:e654;
+allow 2620:7:6001::ffff:c759:e656;
+allow 2620:7:6001::ffff:c759:e657;
+allow 2620:7:6001::ffff:c759:e658;
+allow 2620:7:6001::ffff:c759:e659;
 allow 2620:95:4007::111;
 allow 27.255.75.198;
 allow 2a00:16b0:1:243::7012:3117;
@@ -1365,8 +1555,6 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
-allow 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
-allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
