--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -209,7 +209,7 @@ set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.64;
 set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.218.144.99;
-set_real_ip_from 178.30.96.132;
+set_real_ip_from 178.31.60.188;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
@@ -247,7 +247,6 @@ set_real_ip_from 185.112.146.167;
 set_real_ip_from 185.113.128.30;
 set_real_ip_from 185.117.215.9;
 set_real_ip_from 185.123.102.122;
-set_real_ip_from 185.126.117.21;
 set_real_ip_from 185.129.61.1;
 set_real_ip_from 185.129.61.10;
 set_real_ip_from 185.129.61.129;
@@ -270,9 +269,11 @@ set_real_ip_from 185.146.232.234;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.14;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.170.114.25;
+set_real_ip_from 185.177.151.34;
 set_real_ip_from 185.183.157.214;
 set_real_ip_from 185.183.159.40;
 set_real_ip_from 185.191.204.254;
@@ -626,8 +627,7 @@ set_real_ip_from 195.47.238.83;
 set_real_ip_from 195.47.238.84;
 set_real_ip_from 195.47.238.86;
 set_real_ip_from 195.47.238.87;
-set_real_ip_from 195.47.238.92;
-set_real_ip_from 195.47.238.93;
+set_real_ip_from 195.47.238.88;
 set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 198.251.84.163;
@@ -778,6 +778,101 @@ set_real_ip_from 204.8.156.142;
 set_real_ip_from 204.85.191.7;
 set_real_ip_from 204.85.191.8;
 set_real_ip_from 204.85.191.9;
+set_real_ip_from 204.8.96.100;
+set_real_ip_from 204.8.96.101;
+set_real_ip_from 204.8.96.102;
+set_real_ip_from 204.8.96.103;
+set_real_ip_from 204.8.96.104;
+set_real_ip_from 204.8.96.105;
+set_real_ip_from 204.8.96.106;
+set_real_ip_from 204.8.96.107;
+set_real_ip_from 204.8.96.108;
+set_real_ip_from 204.8.96.109;
+set_real_ip_from 204.8.96.110;
+set_real_ip_from 204.8.96.111;
+set_real_ip_from 204.8.96.112;
+set_real_ip_from 204.8.96.113;
+set_real_ip_from 204.8.96.114;
+set_real_ip_from 204.8.96.115;
+set_real_ip_from 204.8.96.116;
+set_real_ip_from 204.8.96.117;
+set_real_ip_from 204.8.96.118;
+set_real_ip_from 204.8.96.119;
+set_real_ip_from 204.8.96.120;
+set_real_ip_from 204.8.96.121;
+set_real_ip_from 204.8.96.122;
+set_real_ip_from 204.8.96.123;
+set_real_ip_from 204.8.96.140;
+set_real_ip_from 204.8.96.141;
+set_real_ip_from 204.8.96.142;
+set_real_ip_from 204.8.96.143;
+set_real_ip_from 204.8.96.144;
+set_real_ip_from 204.8.96.145;
+set_real_ip_from 204.8.96.146;
+set_real_ip_from 204.8.96.147;
+set_real_ip_from 204.8.96.149;
+set_real_ip_from 204.8.96.150;
+set_real_ip_from 204.8.96.151;
+set_real_ip_from 204.8.96.152;
+set_real_ip_from 204.8.96.153;
+set_real_ip_from 204.8.96.154;
+set_real_ip_from 204.8.96.155;
+set_real_ip_from 204.8.96.156;
+set_real_ip_from 204.8.96.157;
+set_real_ip_from 204.8.96.158;
+set_real_ip_from 204.8.96.159;
+set_real_ip_from 204.8.96.160;
+set_real_ip_from 204.8.96.161;
+set_real_ip_from 204.8.96.162;
+set_real_ip_from 204.8.96.163;
+set_real_ip_from 204.8.96.164;
+set_real_ip_from 204.8.96.165;
+set_real_ip_from 204.8.96.166;
+set_real_ip_from 204.8.96.167;
+set_real_ip_from 204.8.96.168;
+set_real_ip_from 204.8.96.169;
+set_real_ip_from 204.8.96.170;
+set_real_ip_from 204.8.96.171;
+set_real_ip_from 204.8.96.172;
+set_real_ip_from 204.8.96.173;
+set_real_ip_from 204.8.96.174;
+set_real_ip_from 204.8.96.175;
+set_real_ip_from 204.8.96.176;
+set_real_ip_from 204.8.96.177;
+set_real_ip_from 204.8.96.178;
+set_real_ip_from 204.8.96.179;
+set_real_ip_from 204.8.96.180;
+set_real_ip_from 204.8.96.181;
+set_real_ip_from 204.8.96.182;
+set_real_ip_from 204.8.96.183;
+set_real_ip_from 204.8.96.184;
+set_real_ip_from 204.8.96.185;
+set_real_ip_from 204.8.96.187;
+set_real_ip_from 204.8.96.188;
+set_real_ip_from 204.8.96.189;
+set_real_ip_from 204.8.96.64;
+set_real_ip_from 204.8.96.67;
+set_real_ip_from 204.8.96.68;
+set_real_ip_from 204.8.96.69;
+set_real_ip_from 204.8.96.70;
+set_real_ip_from 204.8.96.71;
+set_real_ip_from 204.8.96.72;
+set_real_ip_from 204.8.96.73;
+set_real_ip_from 204.8.96.74;
+set_real_ip_from 204.8.96.75;
+set_real_ip_from 204.8.96.76;
+set_real_ip_from 204.8.96.77;
+set_real_ip_from 204.8.96.78;
+set_real_ip_from 204.8.96.79;
+set_real_ip_from 204.8.96.80;
+set_real_ip_from 204.8.96.81;
+set_real_ip_from 204.8.96.82;
+set_real_ip_from 204.8.96.83;
+set_real_ip_from 204.8.96.84;
+set_real_ip_from 204.8.96.86;
+set_real_ip_from 204.8.96.87;
+set_real_ip_from 204.8.96.88;
+set_real_ip_from 204.8.96.89;
 set_real_ip_from 205.185.113.180;
 set_real_ip_from 205.185.116.34;
 set_real_ip_from 205.185.117.149;
@@ -1070,6 +1165,101 @@ set_real_ip_from 2620:18c:0:192::227;
 set_real_ip_from 2620:18c:0:192::228;
 set_real_ip_from 2620:18c:0:192::229;
 set_real_ip_from 2620:18c:0:192::230;
+set_real_ip_from 2620:7:6001::101;
+set_real_ip_from 2620:7:6001::102;
+set_real_ip_from 2620:7:6001::103;
+set_real_ip_from 2620:7:6001::104;
+set_real_ip_from 2620:7:6001::105;
+set_real_ip_from 2620:7:6001::106;
+set_real_ip_from 2620:7:6001::107;
+set_real_ip_from 2620:7:6001::108;
+set_real_ip_from 2620:7:6001::109;
+set_real_ip_from 2620:7:6001::110;
+set_real_ip_from 2620:7:6001::111;
+set_real_ip_from 2620:7:6001::112;
+set_real_ip_from 2620:7:6001::113;
+set_real_ip_from 2620:7:6001::114;
+set_real_ip_from 2620:7:6001::115;
+set_real_ip_from 2620:7:6001::116;
+set_real_ip_from 2620:7:6001::117;
+set_real_ip_from 2620:7:6001::118;
+set_real_ip_from 2620:7:6001::119;
+set_real_ip_from 2620:7:6001::120;
+set_real_ip_from 2620:7:6001::121;
+set_real_ip_from 2620:7:6001::122;
+set_real_ip_from 2620:7:6001::123;
+set_real_ip_from 2620:7:6001::140;
+set_real_ip_from 2620:7:6001::141;
+set_real_ip_from 2620:7:6001::142;
+set_real_ip_from 2620:7:6001::143;
+set_real_ip_from 2620:7:6001::144;
+set_real_ip_from 2620:7:6001::145;
+set_real_ip_from 2620:7:6001::146;
+set_real_ip_from 2620:7:6001::147;
+set_real_ip_from 2620:7:6001::149;
+set_real_ip_from 2620:7:6001::150;
+set_real_ip_from 2620:7:6001::151;
+set_real_ip_from 2620:7:6001::152;
+set_real_ip_from 2620:7:6001::153;
+set_real_ip_from 2620:7:6001::154;
+set_real_ip_from 2620:7:6001::155;
+set_real_ip_from 2620:7:6001::156;
+set_real_ip_from 2620:7:6001::157;
+set_real_ip_from 2620:7:6001::158;
+set_real_ip_from 2620:7:6001::159;
+set_real_ip_from 2620:7:6001::160;
+set_real_ip_from 2620:7:6001::161;
+set_real_ip_from 2620:7:6001::162;
+set_real_ip_from 2620:7:6001::163;
+set_real_ip_from 2620:7:6001::164;
+set_real_ip_from 2620:7:6001::165;
+set_real_ip_from 2620:7:6001::166;
+set_real_ip_from 2620:7:6001::167;
+set_real_ip_from 2620:7:6001::168;
+set_real_ip_from 2620:7:6001::169;
+set_real_ip_from 2620:7:6001::170;
+set_real_ip_from 2620:7:6001::171;
+set_real_ip_from 2620:7:6001::172;
+set_real_ip_from 2620:7:6001::173;
+set_real_ip_from 2620:7:6001::174;
+set_real_ip_from 2620:7:6001::175;
+set_real_ip_from 2620:7:6001::176;
+set_real_ip_from 2620:7:6001::177;
+set_real_ip_from 2620:7:6001::178;
+set_real_ip_from 2620:7:6001::179;
+set_real_ip_from 2620:7:6001::180;
+set_real_ip_from 2620:7:6001::181;
+set_real_ip_from 2620:7:6001::182;
+set_real_ip_from 2620:7:6001::183;
+set_real_ip_from 2620:7:6001::184;
+set_real_ip_from 2620:7:6001::185;
+set_real_ip_from 2620:7:6001::187;
+set_real_ip_from 2620:7:6001::188;
+set_real_ip_from 2620:7:6001::189;
+set_real_ip_from 2620:7:6001::e664;
+set_real_ip_from 2620:7:6001::ffff:c759:e640;
+set_real_ip_from 2620:7:6001::ffff:c759:e643;
+set_real_ip_from 2620:7:6001::ffff:c759:e644;
+set_real_ip_from 2620:7:6001::ffff:c759:e645;
+set_real_ip_from 2620:7:6001::ffff:c759:e646;
+set_real_ip_from 2620:7:6001::ffff:c759:e647;
+set_real_ip_from 2620:7:6001::ffff:c759:e648;
+set_real_ip_from 2620:7:6001::ffff:c759:e649;
+set_real_ip_from 2620:7:6001::ffff:c759:e64a;
+set_real_ip_from 2620:7:6001::ffff:c759:e64b;
+set_real_ip_from 2620:7:6001::ffff:c759:e64c;
+set_real_ip_from 2620:7:6001::ffff:c759:e64d;
+set_real_ip_from 2620:7:6001::ffff:c759:e64e;
+set_real_ip_from 2620:7:6001::ffff:c759:e64f;
+set_real_ip_from 2620:7:6001::ffff:c759:e650;
+set_real_ip_from 2620:7:6001::ffff:c759:e651;
+set_real_ip_from 2620:7:6001::ffff:c759:e652;
+set_real_ip_from 2620:7:6001::ffff:c759:e653;
+set_real_ip_from 2620:7:6001::ffff:c759:e654;
+set_real_ip_from 2620:7:6001::ffff:c759:e656;
+set_real_ip_from 2620:7:6001::ffff:c759:e657;
+set_real_ip_from 2620:7:6001::ffff:c759:e658;
+set_real_ip_from 2620:7:6001::ffff:c759:e659;
 set_real_ip_from 2620:95:4007::111;
 set_real_ip_from 27.255.75.198;
 set_real_ip_from 2a00:16b0:1:243::7012:3117;
@@ -1365,8 +1555,6 @@ set_real_ip_from 2a0b:f4c2::6;
 set_real_ip_from 2a0b:f4c2::7;
 set_real_ip_from 2a0b:f4c2::8;
 set_real_ip_from 2a0b:f4c2::9;
-set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
-set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
